[package]
name = "rocket_utilize"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
arc-swap = "1.7.1"
chrono = "0.4.39"
cookie = "0.18.1"
futures = "0.3.31"
jsonwebtoken = "9.3.0"
rocket = "0.5.1"
serde = { version = "1.0.217", features = ["derive"] }
tera = { version = "1.20" }
