[package]
name = "rocket_utilize"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
arc-swap = "1.7.1"
chrono = { version = "0.4.39", features = ["serde"] }
cookie = "0.18.1"
futures = "0.3.31"
jsonwebtoken = "9.3.0"
once_cell = "1.20.3"
rocket = {version = "0.5.1", features = ["json"]}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tera = { version = "1.20" }
